FILE( GLOB_RECURSE objectvis_SRCS "*.cpp" "*.h" )
FILE( GLOB_RECURSE objectvis_UI "*.ui" )

QT5_WRAP_UI( objectvis_SRCS ${objectvis_UI})
SET (LIB_TYPE SHARED)
SET (LIBRARY_NAME objectvis)

add_library(${LIBRARY_NAME} ${LIB_TYPE} ${objectvis_SRCS} )
TARGET_LINK_LIBRARIES(${LIBRARY_NAME} PRIVATE base)

INCLUDE(Modules)
MODULE_GENERATE_EXPORT_HEADER ( ${LIBRARY_NAME} )

if (VTK_MAJOR_VERSION GREATER 8)
	vtk_module_autoinit(TARGETS ${LIBRARY_NAME} MODULES ${VTK_LIBRARIES})
endif()

IF (openiA_PRECOMPILE)
	IF (CMAKE_MAJOR_VERSION GREATER 4 OR
	(CMAKE_MAJOR_VERSION EQUAL 3 AND CMAKE_MINOR_VERSION GREATER 15))
		INCLUDE(precompile.cmake)
		target_precompile_headers(${LIBRARY_NAME} PRIVATE ${OPENIA_PRECOMPILE_HEADERS})
	ENDIF()
ENDIF()

TARGET_INCLUDE_DIRECTORIES(${LIBRARY_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../base ${CMAKE_CURRENT_BINARY_DIR}) # for export header

IF (openiA_USE_IDE_FOLDERS)
	SET_PROPERTY(TARGET ${LIBRARY_NAME} PROPERTY FOLDER "Libraries")
ENDIF()