nobase_include_HEADERS = Hilbert.hpp Hilbert/BigBitVec.hpp \
	Hilbert/Common.hpp Hilbert/FixBitVec.hpp
nobase_noinst_HEADERS = Hilbert/Algorithm.hpp \
	Hilbert/BigBitVec.hpp Hilbert/Common.hpp Hilbert/FixBitVec.hpp \
	Hilbert/GetBits.hpp Hilbert/GetLocation.hpp Hilbert/GrayCodeRank.hpp \
	Hilbert/SetBits.hpp Hilbert/SetLocation.hpp
